exports[`invalid(1): {\"peerDependencies\": {\"react\": \"v18.2.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "v18.2.0"}}

`;

exports[`invalid(1): {\"peerDependencies\": {\"react\": \"v18.2.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "v18.2.0"}}
    |                                ^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`v18.2.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=18"}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"react\": \"=1.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "=1.0.0"}}

`;

exports[`invalid(10): {\"peerDependencies\": {\"react\": \"=1.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "=1.0.0"}}
    |                                ^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`=1.0.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^1.0.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=1"}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"react\": \"=v18.2.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "=v18.2.0"}}

`;

exports[`invalid(11): {\"peerDependencies\": {\"react\": \"=v18.2.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "=v18.2.0"}}
    |                                ^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`=v18.2.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=18"}}

`;

exports[`invalid(12): {\"peerDependencies\": {\"react\": \"=18.2.0+build.1\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "=18.2.0+build.1"}}

`;

exports[`invalid(12): {\"peerDependencies\": {\"react\": \"=18.2.0+build.1\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "=18.2.0+build.1"}}
    |                                ^^^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`=18.2.0+build.1\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^18.2.0+build.1"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=18"}}

`;

exports[`invalid(13): {\"peerDependencies\": {\"react\": \"npm:react-dom@18.2.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "npm:react-dom@18.2.0"}}

`;

exports[`invalid(13): {\"peerDependencies\": {\"react\": \"npm:react-dom@18.2.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "npm:react-dom@18.2.0"}}
    |                                ^^^^^^^^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`npm:react-dom@18.2.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "npm:react-dom@^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": "npm:react-dom@>=18"}}

`;

exports[`invalid(14): {\"peerDependencies\": {\"react\": \"npm:@scope/react@18.2.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "npm:@scope/react@18.2.0"}}

`;

exports[`invalid(14): {\"peerDependencies\": {\"react\": \"npm:@scope/react@18.2.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "npm:@scope/react@18.2.0"}}
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`npm:@scope/react@18.2.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "npm:@scope/react@^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": "npm:@scope/react@>=18"}}

`;

exports[`invalid(15): {\"peerDependencies\": {\"react\": \"npm:react-dom@18.2.0 \"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "npm:react-dom@18.2.0 "}}

`;

exports[`invalid(15): {\"peerDependencies\": {\"react\": \"npm:react-dom@18.2.0 \"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "npm:react-dom@18.2.0 "}}
    |                                ^^^^^^^^^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`npm:react-dom@18.2.0 \`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "npm:react-dom@^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": "npm:react-dom@>=18"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"react\": \"18.2.0+build.1\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "18.2.0+build.1"}}

`;

exports[`invalid(2): {\"peerDependencies\": {\"react\": \"18.2.0+build.1\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "18.2.0+build.1"}}
    |                                ^^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`18.2.0+build.1\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^18.2.0+build.1"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=18"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"react\": \"18.2.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "18.2.0"}}

`;

exports[`invalid(3): {\"peerDependencies\": {\"react\": \"18.2.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "18.2.0"}}
    |                                ^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`18.2.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^18.2.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=18"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"react\": \"2.0.0-beta.1\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "2.0.0-beta.1"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"react\": \"2.0.0-beta.1\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "2.0.0-beta.1"}}
    |                                ^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`2.0.0-beta.1\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^2.0.0-beta.1"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=2"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"react\": \"0.13.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "0.13.0"}}

`;

exports[`invalid(5): {\"peerDependencies\": {\"react\": \"0.13.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "0.13.0"}}
    |                                ^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`0.13.0\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^0.13.0"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=0.13.0"}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"react\": \"0.0.3\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "0.0.3"}}

`;

exports[`invalid(6): {\"peerDependencies\": {\"react\": \"0.0.3\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "0.0.3"}}
    |                                ^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`0.0.3\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^0.0.3"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=0.0.3"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"react\": \"0.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "0.0.0"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"react\": \"0.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "0.0.0"}}
    |                                ^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`0.0.0\`; use a range instead.

Suggestion 1/1: Use a caret range.:
  1 | {"peerDependencies": {"react": "^0.0.0"}}

`;

exports[`invalid(8): {\"peerDependencies\": {\"react\": \"0.13.0-beta.1\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"react": "0.13.0-beta.1"}}

`;

exports[`invalid(8): {\"peerDependencies\": {\"react\": \"0.13.0-beta.1\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"react": "0.13.0-beta.1"}}
    |                                ^^^^^^^^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`0.13.0-beta.1\`; use a range instead.

Suggestion 1/2: Use a caret range.:
  1 | {"peerDependencies": {"react": "^0.13.0-beta.1"}}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {"peerDependencies": {"react": ">=0.13.0"}}

`;

exports[`invalid(9): {\n\t\t\t\"peerDependencies\": {\n\t\t\t\t\"react\": \"18.2.0\",\n\t\t\t\t\"vue\": \"^3.0.0\"\n\t\t\t}\n\t\t} 1`] = `

[Input]
  1 | {
  2 | 			"peerDependencies": {
  3 | 				"react": "18.2.0",
  4 | 				"vue": "^3.0.0"
  5 | 			}
  6 | 		}

`;

exports[`invalid(9): {\n\t\t\t\"peerDependencies\": {\n\t\t\t\t\"react\": \"18.2.0\",\n\t\t\t\t\"vue\": \"^3.0.0\"\n\t\t\t}\n\t\t} 2`] = `

Message:
  1 | {
  2 | 			"peerDependencies": {
> 3 | 				"react": "18.2.0",
    | 				         ^^^^^^^^ Peer dependency \`react\` is pinned to the exact version \`18.2.0\`; use a range instead.
  4 | 				"vue": "^3.0.0"
  5 | 			}
  6 | 		}

Suggestion 1/2: Use a caret range.:
  1 | {
  2 | 			"peerDependencies": {
  3 | 				"react": "^18.2.0",
  4 | 				"vue": "^3.0.0"
  5 | 			}
  6 | 		}

Suggestion 2/2: Use a \`>=\` range.:
  1 | {
  2 | 			"peerDependencies": {
  3 | 				"react": ">=18",
  4 | 				"vue": "^3.0.0"
  5 | 			}
  6 | 		}

`;
